@@ -52,7 +52,7 @@ $langCountry = ctransifexHelperLanguage::code2ToCountry($langParts[1]);
 				<td>
 					<div>
 						<?php if ($this->project->params['display_contribute_link']) : ?>
-							<a href="http://transifex.com/projects/p/<?php echo $this->project->transifex_slug; ?>/language/<?php echo $language->lang_name; ?>"
+							<a href="http://transifex.com/projects/p/<?php echo $this->project->transifex_slug; ?>/translate/#<?php echo CtransifexHelperTransifex::getLangCode($language->lang_name, $this->project->transifex_config, true); ?>/<?php echo $resource->resource_name; ?>"
 							   class="btn" target="_blank">
 								<?php echo JText::_('COM_CTRANSIFEX_CONTRIBUTE_NOW'); ?>
 							</a>
